--- a/React/dashboard/src/sidebar.css
+++ b/React/dashboard/src/sidebar.css
@@ -1,26 +1,27 @@
 body {
     font-family: "Open Sans", arial;
     /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#3f4c6b+0,3f4c6b+100;Blue+Grey+Flat */
-        background: rgb(63, 76, 107);
-        /* Old browsers */
-        background: -moz-linear-gradient(top, rgb(63, 76, 107) 0%, rgb(63, 76, 107) 100%);
-        /* FF3.6-15 */
-        background: -webkit-linear-gradient(top, rgb(63, 76, 107) 0%, rgb(63, 76, 107) 100%);
-        /* Chrome10-25,Safari5.1-6 */
-        background: linear-gradient(to bottom, rgb(63, 76, 107) 0%, rgb(63, 76, 107) 100%);
-        /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-        filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#3f4c6b', endColorstr='#3f4c6b', GradientType=0);
-        /* IE6-9 */
+    background: rgb(63, 76, 107);
+    /* Old browsers */
+    background: -moz-linear-gradient(top, rgb(63, 76, 107) 0%, rgb(63, 76, 107) 100%);
+    /* FF3.6-15 */
+    background: -webkit-linear-gradient(top, rgb(63, 76, 107) 0%, rgb(63, 76, 107) 100%);
+    /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(to bottom, rgb(63, 76, 107) 0%, rgb(63, 76, 107) 100%);
+    /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#3f4c6b', endColorstr='#3f4c6b', GradientType=0);
+    /* IE6-9 */
 }
 
 nav {
     background: #4e586e;
     position: absolute;
-    top: 0;
+    top: 50px;
     bottom: 0;
     height: 100%;
-    left: 0;
+    left: 465px;
     width: 70px;
+    max-height: 715px;
     overflow: hidden;
     -webkit-transition: width .2s linear;
     transition: width .2s linear;
@@ -107,7 +108,7 @@ nav:hover>.label {
     overflow-x: hidden;
 }
 
- #scrollbar::-webkit-scrollbar-track {
+#scrollbar::-webkit-scrollbar-track {
     border-radius: 2px;
 }
 
