--- a/React/starship/src/index.css
+++ b/React/starship/src/index.css
@@ -3,12 +3,15 @@ body, html {
   padding: 0;
   box-sizing: border-box;
 }
+#root {
+  background-image: url(https://wallpapers.com/images/hd/star-wars-death-star-lobjmgq0es7whc97.webp);
+  background-size: cover;
+  
+}
 
 
 .container {
-  overflow: hidden;
-  width: 100vw;
-  height: 100vh;
+  min-height: 100vh;
   display: flex;
   flex-wrap: wrap;
   column-gap: 20px;
@@ -24,6 +27,7 @@ body, html {
 }
 
 .card-body {
+  border: 2px solid #fff;
   background-color: black;
   width: 100%;
   max-height: 400px;
